# ProxyForFree

./: .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  proxy_manager.py  pyproject.toml  todo.md
.github/workflows/: pre-commit.yml
api/: app.py  routes.py  schemas.py  service.py
cli/: commands.py
core/: config.py  state.py
proxy/: instance.py  server.py
vpn/: manager.py
vpn_configs/canada/: ca-free-12.protonvpn.udp.ovpn  ca-free-5.protonvpn.udp.ovpn  ca-free-6.protonvpn.udp.ovpn  ca-free-9.protonvpn.udp.ovpn
vpn_configs/japan/: jp-free-16.protonvpn.udp.ovpn  jp-free-23.protonvpn.udp.ovpn  jp-free-24.protonvpn.udp.ovpn  jp-free-25.protonvpn.udp.ovpn  jp-free-34.protonvpn.udp.ovpn
vpn_configs/mexico/: mx-free-11.protonvpn.udp.ovpn  mx-free-3.protonvpn.udp.ovpn  mx-free-7.protonvpn.udp.ovpn
vpn_configs/netherlands/: nl-free-118.protonvpn.udp.ovpn  nl-free-119.protonvpn.udp.ovpn  nl-free-120.protonvpn.udp.ovpn  nl-free-122.protonvpn.udp.ovpn  nl-free-125.protonvpn.udp.ovpn
vpn_configs/norway/: no-free-10.protonvpn.udp.ovpn  no-free-5.protonvpn.udp.ovpn  no-free-6.protonvpn.udp.ovpn
vpn_configs/poland/: pl-free-13.protonvpn.udp.ovpn
vpn_configs/romania/: ro-free-23.protonvpn.udp.ovpn  ro-free-24.protonvpn.udp.ovpn  ro-free-25.protonvpn.udp.ovpn  ro-free-26.protonvpn.udp.ovpn
vpn_configs/singapore/: sg-free-14.protonvpn.udp.ovpn  sg-free-18.protonvpn.udp.ovpn  sg-free-3.protonvpn.udp.ovpn  sg-free-6.protonvpn.udp.ovpn  sg-free-8.protonvpn.udp.ovpn
vpn_configs/switzerland/: ch-free-3.protonvpn.udp.ovpn  (+1 more)
(+5 files in other folders)
